@@ -1,3 +1,10 @@
+2025-03-24  Zhengyi Fu  <i@fuzy.me>
+
+	Add command for enabling `prism-mode' in projects
+
+	* init.el (prism-project): New command.
+	(prism-project-mode-history): New variable.
+
 2025-03-23  Zhengyi Fu  <i@fuzy.me>
 
 	* packages.el: Add package AUCTeX.
